force-app/main/default/objects/ITM_Bid_Item__mdt/ITM_Bid_Item__mdt.object-meta.xml
<CustomObject>
    <description>Stores pre-configured ITM bid worksheet items with default hours for Fire Alarm and Fire Sprinkler categories</description>
    <label>ITM Bid Item</label>
    <pluralLabel>ITM Bid Items</pluralLabel>
</CustomObject>