force-app/main/default/objects/ITM_Bid_Item__mdt/fields/Column__c.field-meta.xml
<CustomField>
    <fullName>Column__c</fullName>
    <label>Column</label>
    <length>10</length>
    <type>Text</type>
</CustomField>