force-app/main/default/objects/ITM_Bid_Item__mdt/fields/Default_Hours__c.field-meta.xml
<CustomField>
    <fullName>Default_Hours__c</fullName>
    <label>Default Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>