force-app/main/default/objects/ITM_Bid_Item__mdt/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <label>Section</label>
    <length>50</length>
    <type>Text</type>
</CustomField>